2009-02-08 Borut Razem <borut.razem AT siol.net>

	* as/COPYING3: added
	* support/scripts/sdcc.nsi: added COPYING3.txt to the package
	* device/lib/Makefile.in: reenable floating point in model-xstack-auto
	  libraries

2009-02-07 Borut Razem <borut.razem AT siol.net>

	* asranlib/asranlib.c: fixed BSD header length calculation
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.9
	  due sdcc asxxxx license change to GPLv3

2009-02-05 Borut Razem <borut.razem AT siol.net>

	* asranlib/asranlib.c, link/lkar.h, link/lkar.c:
	  added support for BSD (Mac OS X) ar format
	* as/asxxsrc/aslex.c, as/as/asxxsrc/asnoice.c, as/as/asxxsrc/assym.c,
	  as/as/hc08/asdata.c, as/hc08/asexpr.c, as/hc08/aslist.c,
	  as/hc08/asm.h, as/hc08/asmain.c, as/hc08/asout.c, as/hc08/assubr.c,
	  as/hc08/m08adr.c, as/hc08/m08ext.c, as/hc08/m08mch.c,
	  as/hc08/m08pst.c, as/hc08/m6808.h, as/link/aslink.h,
	  as/link/hc08/lkarea.c, as/link/hc08/lkelf.c, as/link/hc08/lkihx.c,
	  as/link/hc08/lkmain.c, as/link/hc08/lkmem.c, as/link/hc08/lkrloc.c,
	  as/link/hc08/lks19.c, as/link/lkaomf51.c, as/link/lkdata.c,
	  as/link/lkeval.c, as/link/lkhead.c, as/link/lklex.c, as/link/lklib.c,
	  as/link/lklibr.c, as/link/lklibr.h, as/link/lklist.c,
	  as/link/lknoice.c, as/link/lkrel.c, as/link/lkrel.h,
	  as/link/lksdcclib.c, as/link/lkstore.c, as/link/lksym.c,
	  as/link/mcs51/lkarea.c, as/link/mcs51/lkihx.c,
	  as/link/mcs51/lkmain.c, as/link/mcs51/lkmem.c,
	  as/link/mcs51/lkrloc.c, as/link/mcs51/lks19.c, as/link/z80/lkarea.c,
	  as/link/z80/lkgb.c, as/link/z80/lkgg.c, as/link/z80/lkihx.c,
	  as/link/z80/lkmain.c, as/link/z80/lkrloc.c, as/link/z80/lks19.c,
	  as/mcs51/asdata.c, as/mcs51/asexpr.c, as/mcs51/aslist.c,
	  as/mcs51/asm.h, as/mcs51/asmain.c, as/mcs51/asout.c,
	  as/mcs51/assubr.c, as/mcs51/i51adr.c, as/mcs51/i51ext.c,
	  as/mcs51/i51mch.c, as/mcs51/i51pst.c, as/mcs51/i8051.h,
	  as/xa51/xa_link.c, as/xa51/xa_main.c, as/xa51/xa_main.h,